[wheel]
python-tag = py36

[bdist_wheel]
python-tag = py36

[check-manifest]
ignore =
    .travis.yml
    tox.ini

[metadata]
license_file = LICENSE

[aliases]
test=pytest

[flake8]
ignore = E302,E402,F403,E265,E201,E124,E202,E123,E731
max-line-length = 90
exclude = .git,__pycache__,.tox,*.egg
max-complexity = 15
